--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="container">
             <h1>Hello World</h1>
-            <h2>This is my Thymeleaf index page. This is my changed.</h2>
+            <h2>This is my Thymeleaf index page.</h2>
         </div>
     </body>
 </html>
