--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Core Online Tutorial</title>
+    <title>Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/4.3.1/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}"
@@ -21,12 +21,14 @@
                 <th>Description</th>
                 <th>Price</th>
                 <th>Image URL</th>
+                <th>List</th>
             </tr>
             <tr th:each="product : ${products}">
                 <td th:text="${product.id}"></td>
                 <td th:text="${product.description}"></td>
                 <td th:text="${product.price}"></td>
                 <td th:text="${product.imageUrl}"></td>
+                <td><a th:href="${'/product/' + product.id}">View</a> </td>
             </tr>
         </table>
     </div>
