Add edit product

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>Products - Spring Core</title>
+        <title>Products - Spring MVC</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <link href="http://cdn.jsdelivr.net/webjars/bootstrap/4.3.1/css/bootstrap.min.css"
               th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}"
