--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -8,7 +8,7 @@
           rel="stylesheet" media="screen" />
     <script src="http://cdn.jsdelivr.net/webjars/jquery/3.4.1/jquery.min.js"
             th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
-    <link href="../static/css/spring-core.css"
+    <link href="../static/css/style.css"
           th:href="@{css/spring-core.css}" rel="stylesheet" media="screen"/>
 </head>
 <body>
