--- a/src/main/resources/templates/customer/customerform.html
+++ b/src/main/resources/templates/customer/customerform.html
@@ -45,31 +45,31 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Address Line One:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{addressLineOne}"/>
+                        <input type="text" class="form-control" th:field="*{billingAddress.addressLine1}"/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Address Line Two:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{addressLineTwo}"/>
+                        <input type="text" class="form-control" th:field="*{billingAddress.addressLine2}"/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">City:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{city}"/>
+                        <input type="text" class="form-control" th:field="*{billingAddress.city}"/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">State:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{state}"/>
+                        <input type="text" class="form-control" th:field="*{billingAddress.state}"/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Zip Code:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{zipCode}"/>
+                        <input type="text" class="form-control" th:field="*{billingAddress.zipCode}"/>
                     </div>
                 </div>
                 <div class="form-group row">
