--- a/src/main/resources/templates/customer/show.html
+++ b/src/main/resources/templates/customer/show.html
@@ -54,31 +54,31 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Address Line One:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-plaintext" th:text="${customer.addressLineOne}">Address Line One</p>
+                        <p class="form-control-plaintext" th:text="${customer.billingAddress.addressLine1}">Address Line One</p>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Address Line Two:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-plaintext" th:text="${customer.addressLineTwo}">Address Line Two</p>
+                        <p class="form-control-plaintext" th:text="${customer.billingAddress.addressLine2}">Address Line Two</p>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">City:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-plaintext" th:text="${customer.city}">City</p>
+                        <p class="form-control-plaintext" th:text="${customer.billingAddress.city}">City</p>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">State:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-plaintext" th:text="${customer.state}">State</p>
+                        <p class="form-control-plaintext" th:text="${customer.billingAddress.state}">State</p>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Zip Code:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-plaintext" th:text="${customer.zipCode}">Zip Code</p>
+                        <p class="form-control-plaintext" th:text="${customer.billingAddress.zipCode}">Zip Code</p>
                     </div>
                 </div>
             </form>
