--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,7 @@
             <ul>
                 <li><a href="product/list">Products</a></li>
                 <li><a href="customer/list">Customers</a></li>
+                <li><a href="user/list">Users</a></li>
             </ul>
         </div>
     </body>
